Fix overflow card

--- a/css/style.css
+++ b/css/style.css
@@ -16,16 +16,17 @@ a{
 }
 /* HEADER */
 header{
-    position: absolute;
+    position: fixed;
     top: 7px;
-    right: 15px;
+    right: 20px;
     display: flex;
+    z-index: 10;
 }
 .header-menu{
-    font-size: 15px;
     background-color: grey;
-    border-radius: 7px;
+    font-size: 15px;
     color: white;
+    border-radius: 7px;
     padding: 5px;
 }
 .header-menu li{
@@ -37,8 +38,9 @@ header{
 /* MAIN */
 main{
     background-color: black;
-    height: 100vh;
+    height: calc(100vh - 80px);
     width: 100%;
+    overflow-y: auto;
 }
 .card-container{
     display: flex;
@@ -76,6 +78,7 @@ footer{
     position: fixed;
     bottom: 0;
     left: 0;
+    z-index: 10;
     
 }
 nav{
